# ImageClassifier

./: Dockerfile  README.md  client.py  docker-compose.yml  explore.ipynb  predictor.py  pyproject.toml  trainer.py
App/: README.md  client.py  predictor.py  settings.py
ImageClassifier/: README.md  __init__.py  settings.py  trainer.py
UnifiedAPI/: README.md  adapter.py  main.py  settings.py  test_UnifiedAPI.py
utils/: pathDisplay.py
