[tool.poetry]
name = "imageclassifier"
version = "0.1.0"
description = ""
authors = ["Acusick1 <andrewcusick13@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9"
tensorflow = "^2.7.0"
matplotlib = "^3.5.1"
kafka-python = "^2.0.2"
PyYAML = "^6.0"
h5py = "^3.6.0"
google-cloud-pubsub = "^2.9.0"
jupyter = "^1.0.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
