[tool.poetry]
name = "imageclassifier"
version = "0.1.0"
description = ""
authors = ["Acusick1 <andrewcusick13@outlook.com>"]
packages = [
    { include = "ImageClassifier" },
    { include = "ImageClassifier/**/*.py" },
    { include = "UnifiedAPI" },
    { include = "UnifiedAPI/**/*.py" },
    { include = "App" },
    { include = "App/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
tensorflow = "^2.7.0"
matplotlib = "^3.5.1"
kafka-python = "^2.0.2"
PyYAML = "^6.0"
h5py = "^3.6.0"
google-cloud-pubsub = "^2.9.0"
sklearn = "^0.0"
tensorflow-datasets = "^4.5.2"
jupyterlab = "^3.2.9"
ipykernel = "^6.9.1"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
